# beaglev-fire-zephyr-and-baremetal-with-gateware

./: .gitignore  .gitmodules  README.md  build-flash.sh  build.bat  build.wsl.sh  connect-gdb.wsl.sh  flash.sh  image-conf.yaml  init.gdb  readme.markdown  readme.md
app/: prj.conf
app/boards/: beaglev_fire_polarfire_u54.overlay
app/src/: main.c
apps/hello-smp/: CMakeLists.txt  image-conf.yaml  prj.conf
apps/rust-app/: CMakeLists.txt  Cargo.toml  README.md
apps/rust-app/src/: main.c
apps/spi-erase/: BOARD  CMakeLists.txt  image-conf.yaml  prj.conf
baremetal/hello-rust/: .gitignore  Cargo.toml  README.md  build.rs  image-conf.yaml  linker.ld  makefile  riscv64gc-lp64d.json
baremetal/hello-rust/.cargo/: config.toml
baremetal/hello-rust/mpfs-platform/: wrapper.h
baremetal/hello-rust/mpfs-platform/application/hart1/: u54_1.c
baremetal/hello-rust/mpfs-platform/boards/beaglev-fire/platform_config/mpfs_hal_config/: mss_sw_config.h
baremetal/hello-rust/scripts/: regenerate-board-headers.sh
baremetal/hello-rust/src/: critical_section_impl.rs  criticalsection.rs  embassy_executor_riscv.rs  lib.rs  main.rs  mpfs.rs  time_driver.rs
baremetal/hello-rust/src/application/hart1/: u54_1.c
baremetal/hello-rust/src/sys/: clint.rs  mod.rs
baremetal/mpfs-mac-simple-test/: image-conf.yaml  makefile
baremetal/mpfs-timer-example/: README.md  image-conf.yaml  makefile
baremetal/mpfs-usb-device-hid/: image-conf.yaml  makefile
baremetal/mpfs-usb-host-hid/: image-conf.yaml  makefile
gateware/: .gitignore  README.md  blinky.yaml  default.yaml  midi_ctrl.yaml  setup-microchip-tools.sh
gateware/custom-fpga-design/: midi_ctrl.yaml  my_custom_fpga_design.yaml
scripts/: build-baremetal-rust-wsl.sh  build-baremetal-rust.sh  build-baremetal.sh  build-hss-fpga-bitstream.sh  build.bat  build.sh  build.wsl.sh  connect-gdb.bat  connect-gdb.sh  connect-gdb.wsl.sh  connect-openocd.sh  connect-tty.sh  flash.py  flash.sh  init-baremetal-wsl.gdb  init.gdb  script-config.sh
(+34 files in other folders)
