[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "hello-rust"
test = false
bench = false

[lib]
crate-type = ["lib", "staticlib"]
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
debug_logs = []

[dependencies]
critical-section = { version = "1.2", features = ["restore-state-u8"] }
embassy-executor = { version = "0.6", path = "../../../external/embassy/embassy-executor", features = [
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-time = { version = "0.3", path = "../../../external/embassy/embassy-time" }
embassy-time-driver = { version = "0.1", features = [
    "tick-hz-1_000_000",
], path = "../../../external/embassy/embassy-time-driver" }
embassy-sync = { version = "0.6", path = "../../../external/embassy/embassy-sync" }
embedded-alloc = "0.6"
riscv = "0.12"
static_cell = "2.1"
itoa = "1.0"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
walkdir = "2.4"
